# fetch-aoc

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  main.rs
template/: Cargo.toml  main.rs
