[package]
name = "fetch-aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
clap_derive = { version = "4.0.18", features = ["debug"] }
reqwest = { version = "0.11.12", features = ["cookies"] }
