[package]
name = "fetch-aoc"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
chrono = "0.4.22"
clap = { version = "4.0.19", features = ["derive", "env"] }
clap_derive = { version = "4.0.18", features = ["debug"] }
html2md = "0.2.13"
reqwest = { version = "0.11.12", features = ["cookies"] }
tokio = { version = "1.23.1", features = ["full"] }
handlebars = "4.3.5"
toml_edit = { version = "0.15.0", features = ["easy", "perf"] }
